--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,1 @@
-# OpenAI API Configuration
-OPENAI_API_KEY=your-openai-api-key-here
-
-# Embedding Configuration
-# Set to 'openai' for OpenAI embeddings (requires OPENAI_API_KEY)
-# Set to 'local' for local embeddings using all-MiniLM-L6-v2
-EMBEDDING_PROVIDER=openai
-
-# OpenAI Model Settings
-OPENAI_EMBEDDING_MODEL=text-embedding-3-small
-
-# Chroma Database Settings
-CHROMA_PERSIST_DIRECTORY=./storage/index/chroma
-
-# Optional: Chroma collection name
-CHROMA_COLLECTION_NAME=asker_fotball_docs
+OPENAI_API_KEY=test_key
