--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "quality": "node scripts/quality-report.js",
     "dev": "python -m http.server 8000",
     "serve": "npx serve .",
-    "start": "node express-server.js",
-    "server": "node express-server.js",
+    "start": "node scripts/express-server.js",
+    "server": "node scripts/express-server.js",
     "test": "node scripts/rag-test.js",
     "test:smoke": "node scripts/smoke-rag.js",
     "test:ui": "npx playwright test --reporter=list",
@@ -44,12 +44,13 @@
     "@xenova/transformers": "^2.17.2",
     "chromadb": "^3.0.17",
     "dotenv": "^17.2.3",
+    "fast-xml-parser": "^5.3.0",
     "openai": "^6.3.0",
     "wink-bm25-text-search": "^2.0.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.56.0",
     "express": "^5.1.0",
-    "netlify-cli": "^23.9.1"
+    "netlify-cli": "^23.9.5"
   }
 }
